--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,6 +3,17 @@
 
 @import "{{ site.theme }}";
 
+body { 
+    background: #fff;
+    color: #222;
+    font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
+    font-size: 16px;
+    line-height: 1.5;
+    width: 100%;
+    max-width: 720px;
+    margin: 0 auto;
+}
+
 .avatar {
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
