--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -8,7 +8,7 @@ body {
     color: #222;
     font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
     font-size: 16px;
-    line-height: 1.5;
+    line-height: 2;
     width: 100%;
     max-width: 720px;
     margin: 0 auto;
@@ -18,5 +18,5 @@ body {
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   max-width: 150px;
-  margin-left: 10px;
+  margin: 20px;
 }
