--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -7,8 +7,9 @@ body {
     background: #fff;
     color: #222;
     font-family: Inconsolata, Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    font-size: 16px;
+    font-size: 14px;
     line-height: 2;
+    text-align: justify;
     width: 100%;
     max-width: 720px;
     margin: 0 auto;
