--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,15 @@
     <![endif]-->
   </head>
   <body>
+      <header>
+        <img src="oxana.jpg" class="profile-picture" width="150" align="right" class="avatar">
+        <h1><a href="/">Oxana Lundström</a></h1>
+        <ul>
+            <li><a href="/projects">Projects</a></li>
+            <li><a href="/">About</a></li>
+        </ul>
+    </header>
     
-
       {{ content }}
 <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
 
