--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,16 +15,16 @@ body {
     margin: 0 auto;
 }
 
-.avatar {
+header {
+    text-align: center;
+    margin: 50px 0 0;
+}
+
+header .avatar {
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   max-width: 150px;
   margin: 20px;
-}
-
-header {
-    text-align: center;
-    margin: 50px 0 0;
 }
 
 header img {
