--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,6 +17,7 @@ body {
 
 header {
     text-align: center;
+    float: none;
     margin: 50px 0 0;
 }
 
@@ -25,12 +26,6 @@ header .avatar {
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   max-width: 150px;
   margin: 20px;
-}
-
-header img {
-    width: 100px;
-    height: 100px;
-    margin: 0 0 5px;
 }
 
 header h1 {
