Override master header settings

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,16 @@ header h1 {
     font-weight: bold;
 }
 
+header ul {
+    list-style: none;
+    height: 40px;
+    padding: 0;
+    background: #000000;
+    border-radius: 0px;
+    border: 0px;
+    width: 100%;
+}
+
 header li {
     display: inline;
     padding: 0 9px;
