--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -15,11 +15,10 @@ body {
 
 header {
     text-align: center;
-    float: none;
     margin: 50px 0 0;
 }
 
-header .avatar {
+header img {
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
   max-width: 150px;
