--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
   </head>
   <body>
       <header>
-        <img src="oxana.jpg" class="profile-picture" width="150" align="right" class="avatar">
+        <img src="oxana.jpg">
         <h1><a href="/">Oxana Lundström</a></h1>
         <ul>
             <li><a href="/projects">Projects</a></li>
