--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -18,6 +18,10 @@ header {
     margin: 50px 0 0;
 }
 
+header a {
+    color: inherit;
+}
+
 header img {
   border-radius: 50%;
   box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.2);
